--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.7",
     "pinia": "^3.0.2",
