refactor:重构use request accountCenter

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "less": "^4.3.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0"
