--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "vue-shim.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "vue-shim.d.ts", "components.d.ts"],
   "exclude": ["node_modules"]
 }
